--- a/views/pages/de.ejs
+++ b/views/pages/de.ejs
@@ -75,7 +75,7 @@
                         <ul>
                             <li>
                                 <span class="gray-1">IU Hochschule</span>
-                                <span class="white-2">Bachelor Abschluss im Finanzmanagement</span>
+                                <span class="white-2">Bachelor Abschluss in Finanzmanagement</span>
                                 <p>
                                     Spezialisiert auf Rechnungswesen, Finanzanalyse und Controlling mit einer 
                                     soliden Grundlage in globalen Finanzen und Betriebswirtschaft.
@@ -89,7 +89,7 @@
                         <ul>
                             <li>
                                 <span class="gray-1">IU Hochschule</span>
-                                <span class="white-2">Master Abschluss im Finanzwesen</span>
+                                <span class="white-2">Master Abschluss in Finanzwesen</span>
                                 <p>
                                     Ich möchte mein Fachwissen im globalen Finanzwesen erweitern und plane, einen 
                                     Master-Abschluss mit Schwerpunkt auf strategischem Finanzmanagement und 
