--- a/views/pages/de.ejs
+++ b/views/pages/de.ejs
@@ -74,13 +74,14 @@
                     <div class="column-box">
                         <ul>
                             <li>
-                                <span class="gray-1">IU Hochschule</span>
-                                <span class="white-2">Bachelor Abschluss in Finanzmanagement</span>
+                                <span class="gray-1">ISM | International School of Management</span>
+                                <span class="white-2">Bachelor of Science | Finanzmanagement (2024 - 2029)</span>
                                 <p>
+                                    Ich absolviere momentan ein Fernstudium an einer renomierten privaten Hochschule in Hamburg.
                                     Spezialisiert auf Rechnungswesen, Finanzanalyse und Controlling mit einer 
                                     soliden Grundlage in globalen Finanzen und Betriebswirtschaft.
                                 </p>
-                                <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
+                                <a class="normal-link" href="https://ism-fernstudium.de/en/bachelor/b-sc-financial-management" target="_blank">www.ism.de<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
                         </ul>
                     </div>
@@ -88,14 +89,13 @@
                     <div class="column-box">
                         <ul>
                             <li>
-                                <span class="gray-1">IU Hochschule</span>
-                                <span class="white-2">Master Abschluss in Finanzwesen</span>
+                                <span class="gray-1">Ziehe noch verschiedene Masterprogramme in Betracht</span>
+                                <span class="white-2">Master im Finanzwesen (2029 - 2031)</span>
                                 <p>
                                     Ich möchte mein Fachwissen im globalen Finanzwesen erweitern und plane, einen 
                                     Master-Abschluss mit Schwerpunkt auf strategischem Finanzmanagement und 
                                     Investitionsanalyse zu erwerben.
                                 </p>
-                                <a class="normal-link" href="https://www.hochschulkompass.de/home.html" target="_blank">www.hochschulkompass.de<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
                         </ul>
                     </div>
