--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -72,13 +72,14 @@
                     <div class="column-box">
                         <ul>
                             <li>
-                                <span class="gray-1">IU Hochschule</span>
-                                <span class="white-2">Bachelor Degree | Finance</span>
+                                <span class="gray-1">ISM | International School of Management</span>
+                                <span class="white-2">Bachelor of Science | Finanzmanagement (2024 - 2029)</span>
                                 <p>
+                                    I am currently doing a distance learning programme at a renowned private university of applied sciences in Hamburg.
                                     Specialized in Accounting, Financial Analysis, and Controlling with a 
-                                    strong foundation in global finance and business administration
+                                    strong foundation in global finance and business administration.
                                 </p>
-                                <a class="normal-link" href="https://www.hochschulkompass.de/home.html" target="_blank">www.hochschulkompass.de<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
+                                <a class="normal-link" href="https://ism-fernstudium.de/en/bachelor/b-sc-financial-management" target="_blank">www.ism.de<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
                         </ul>
                     </div>
@@ -86,13 +87,12 @@
                     <div class="column-box">
                         <ul>
                             <li>
-                                <span class="gray-1">IU Hochschule</span>
-                                <span class="white-2">Master Degree | Finance</span>
+                                <span class="gray-1">Still considering various Master's programmes</span>
+                                <span class="white-2">Master Degree in Finance (2029 - 2031)</span>
                                 <p>
                                     Passionate about advancing my expertise in global finance, with plans to pursue 
                                     a master's degree focused on strategic financial management and investment analysis.
                                 </p>
-                                <a class="normal-link" href="https://www.hochschulkompass.de/home.html" target="_blank">www.hochschulkompass.de<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
                         </ul>
                     </div>
