--- a/views/pages/fr.ejs
+++ b/views/pages/fr.ejs
@@ -74,11 +74,12 @@
                     <div class="column-box">
                         <ul>
                             <li>
-                                <span class="gray-1">IU Hochschule</span>
-                                <span class="white-2">Bachelor Degree | Finance</span>
+                                <span class="gray-1">ISM | International School of Management</span>
+                                <span class="white-2">Bachelor of Science | Finanzmanagement (2024 - 2029)</span>
                                 <p>
+                                    Je suis actuellement en train de suivre des études à distance dans une école supérieure privée renommée à Hambourg.
                                     Spécialisé dans la comptabilité, l'analyse financière et le contrôle de 
-                                    gestion, avec une base solide en finance globale et en administration 
+                                    gestion, avec une base solide en finance globale et en administration.
                                     des affaires.
                                 </p>
                                 <a class="normal-link" href="https://www.hochschulkompass.de/home.html" target="_blank">www.hochschulkompass.de<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
@@ -89,14 +90,13 @@
                     <div class="column-box">
                         <ul>
                             <li>
-                                <span class="gray-1">IU Hochschule</span>
-                                <span class="white-2">Master Degree | Finance</span>
+                                <span class="gray-1">Envisage encore plusieurs programmes de master</span>
+                                <span class="white-2">Master en finance (2029 - 2031)</span>
                                 <p>
                                     Passionné par le développement de mon expertise dans le domaine de la finance 
                                     mondiale, j'ai l'intention d'obtenir un master axé sur la gestion financière 
                                     stratégique et l'analyse des investissements.
                                 </p>
-                                <a class="normal-link" href="https://www.hochschulkompass.de/home.html" target="_blank">www.hochschulkompass.de<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
                         </ul>
                     </div>
