--- a/views/pages/de.ejs
+++ b/views/pages/de.ejs
@@ -74,8 +74,8 @@
                     <div class="column-box">
                         <ul>
                             <li>
-                                <span class="gray-1">ISM | International School of Management</span>
-                                <span class="white-2">Bachelor of Science | Finanzmanagement (2024 - 2029)</span>
+                                <span class="gray-1">International School of Management</span>
+                                <span class="white-2">B.sc. Finanzmanagement (2024 - 2029)</span>
                                 <p>
                                     Ich absolviere momentan ein Fernstudium an einer renomierten privaten Hochschule in Hamburg.
                                     Spezialisiert auf Rechnungswesen, Finanzanalyse und Controlling mit einer 
