--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -72,8 +72,8 @@
                     <div class="column-box">
                         <ul>
                             <li>
-                                <span class="gray-1">ISM | International School of Management</span>
-                                <span class="white-2">Bachelor of Science | Finanzmanagement (2024 - 2029)</span>
+                                <span class="gray-1">International School of Management</span>
+                                <span class="white-2">B.sc. Finanzmanagement (2024 - 2029)</span>
                                 <p>
                                     I am currently doing a distance learning programme at a renowned private university of applied sciences in Hamburg.
                                     Specialized in Accounting, Financial Analysis, and Controlling with a 
