--- a/views/pages/fr.ejs
+++ b/views/pages/fr.ejs
@@ -74,8 +74,8 @@
                     <div class="column-box">
                         <ul>
                             <li>
-                                <span class="gray-1">ISM | International School of Management</span>
-                                <span class="white-2">Bachelor of Science | Finanzmanagement (2024 - 2029)</span>
+                                <span class="gray-1">International School of Management</span>
+                                <span class="white-2">B.sc. Finanzmanagement (2024 - 2029)</span>
                                 <p>
                                     Je suis actuellement en train de suivre des études à distance dans une école supérieure privée renommée à Hambourg.
                                     Spécialisé dans la comptabilité, l'analyse financière et le contrôle de 
