--- a/views/pages/fr.ejs
+++ b/views/pages/fr.ejs
@@ -82,7 +82,7 @@
                                     gestion, avec une base solide en finance globale et en administration.
                                     des affaires.
                                 </p>
-                                <a class="normal-link" href="https://www.hochschulkompass.de/home.html" target="_blank">www.hochschulkompass.de<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
+                                <a class="normal-link" href="https://ism-fernstudium.de/en/bachelor/b-sc-financial-management" target="_blank">www.ism.de<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
                             </li>
                         </ul>
                     </div>
