Remove education plan section

--- a/views/pages/de.ejs
+++ b/views/pages/de.ejs
@@ -18,8 +18,8 @@
                     </h1>
                     <h5>Abiturient in Handel und Verwaltung</h5>
                     <p>
-                        Mein Name ist Kevin Gomes Pardal Antunes und ich habe vor Kurzem mein 
-                        Studium am „Lycée Technique d'Ettelbruck“ mit Schwerpunkt Handel und 
+                        Mein Name ist Kevin Gomes Pardal Antunes und ich habe mein 
+                        Abitur am „Lycée Technique d'Ettelbruck“ mit Schwerpunkt Handel und 
                         Verwaltung abgeschlossen.
                     </p>
                     <a class="normal-link" href="/check-en">Lebenslauf herunterladen<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
@@ -60,111 +60,6 @@
                         voranzutreiben. Fließend in fünf Sprachen, mit großartigen Problemlösungs- und 
                         Organisationsfähigkeiten.
                     </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="two-columns">
-            <div class="container">
-                <div class="flex-title">
-                    <h4>Bildungsweg</h4>
-                    <span class="title-1">Plan</span>
-                </div>
-                <div class="column-list">
-                    <div class="column-box">
-                        <ul>
-                            <li>
-                                <span class="gray-1">International School of Management</span>
-                                <span class="white-2">B.sc. Finanzmanagement (2024 - 2029)</span>
-                                <p>
-                                    Ich absolviere momentan ein Fernstudium an einer renomierten privaten Hochschule in Hamburg.
-                                    Spezialisiert auf Rechnungswesen, Finanzanalyse und Controlling mit einer 
-                                    soliden Grundlage in globalen Finanzen und Betriebswirtschaft.
-                                </p>
-                                <a class="normal-link" href="https://ism-fernstudium.de/en/bachelor/b-sc-financial-management" target="_blank">www.ism.de<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="column-box">
-                        <ul>
-                            <li>
-                                <span class="gray-1">Ziehe noch verschiedene Masterprogramme in Betracht</span>
-                                <span class="white-2">Master im Finanzwesen (2029 - 2031)</span>
-                                <p>
-                                    Ich möchte mein Fachwissen im globalen Finanzwesen erweitern und plane, einen 
-                                    Master-Abschluss mit Schwerpunkt auf strategischem Finanzmanagement und 
-                                    Investitionsanalyse zu erwerben.
-                                </p>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="column-box">
-                        <ul>
-                            <li>
-                                <span class="gray-1">CFA Institute</span>
-                                <span class="white-2">Chartered Financial Analyst</span>
-                                <p>
-                                    Ein Programm, das vom CFA Institute mit Sitz in den USA international für Investment- 
-                                    und Finanzfachleute angeboten wird.
-                                </p>
-                                <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="container">
-                <div class="flex-title">
-                    <h4>Arbeitsposten</h4>
-                    <span class="title-1">Plan</span>
-                </div>
-
-                <div class="column-list">
-                    <div class="column-box">
-                        <ul>
-                            <li>
-                                <span class="gray-1">Einsteiger</span>
-                                <span class="white-2">Buchhalter</span>
-                                <p>
-                                    Ich beginne meine Laufbahn als Berufsanfänger in der Buchhaltung und möchte 
-                                    eine solide Grundlage in den Bereichen Finanzmanagement, Rechnungslegungsgrundsätze 
-                                    und Compliance schaffen.
-                                </p>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="column-box">
-                        <ul>
-                            <li>
-                                <span class="gray-1">Mittlere Führungsposition</span>
-                                <span class="white-2">Bankangestellter</span>
-                                <p>
-                                    Ich möchte mich als Bankangestellter auszeichnen, indem ich meinen Bachelor-Abschluss 
-                                    in Finanzwesen einsetze, um Kunden bei Finanzdienstleistungen zu unterstützen, Transaktionen 
-                                    zu verwalten und durch außergewöhnlichen Kundenservice und Finanzwissen zum Wachstum 
-                                    der Bank beizutragen.
-                                </p>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="column-box">
-                        <ul>
-                            <li>
-                                <span class="gray-1">Höhere Führungsposition</span>
-                                <span class="white-2">Investmentbanker</span>
-                                <p>
-                                    Auf der Grundlage meines fortgeschrittenen Studiums im Finanzwesen möchte ich Investmentbanker 
-                                    werden. Ich strebe die Leitung von Finanztransaktionen mit hohem Risiko an, einschließlich 
-                                    Fusionen und Übernahmen, Kapitalbeschaffung und strategische Beratungsdienste.
-                                </p>
-                            </li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
