--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -18,7 +18,7 @@
                     </h1>
                     <h5>High School Graduate in Commerce and Administration</h5>
                     <p>
-                    My name is Kevin Gomes Pardal Antunes and I recently graduated from "Lycée 
+                    My name is Kevin Gomes Pardal Antunes and I recently graduated from the high school "Lycée 
                     Technique d'Ettelbruck" with a focus on Commerce and Administration.
                     </p>
                     <a class="normal-link" href="/check-en">Download CV<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
@@ -58,109 +58,6 @@
                         and accounting software, with a passion for leveraging numbers to drive 
                         business growth. Fluent in five languages, with great problem-solving and organizational skills.
                     </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="two-columns">
-            <div class="container">
-                <div class="flex-title">
-                    <h4>Education Path</h4>
-                    <span class="title-1">Plan</span>
-                </div>
-                <div class="column-list">
-                    <div class="column-box">
-                        <ul>
-                            <li>
-                                <span class="gray-1">International School of Management</span>
-                                <span class="white-2">B.sc. Finanzmanagement (2024 - 2029)</span>
-                                <p>
-                                    I am currently doing a distance learning programme at a renowned private university of applied sciences in Hamburg.
-                                    Specialized in Accounting, Financial Analysis, and Controlling with a 
-                                    strong foundation in global finance and business administration.
-                                </p>
-                                <a class="normal-link" href="https://ism-fernstudium.de/en/bachelor/b-sc-financial-management" target="_blank">www.ism.de<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="column-box">
-                        <ul>
-                            <li>
-                                <span class="gray-1">Still considering various Master's programmes</span>
-                                <span class="white-2">Master Degree in Finance (2029 - 2031)</span>
-                                <p>
-                                    Passionate about advancing my expertise in global finance, with plans to pursue 
-                                    a master's degree focused on strategic financial management and investment analysis.
-                                </p>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="column-box">
-                        <ul>
-                            <li>
-                                <span class="gray-1">CFA Institute</span>
-                                <span class="white-2">Chartered Financial Analyst</span>
-                                <p>
-                                    A program that is a postgraduate professional certification offered internationally 
-                                    by the US-based CFA Institute to investment and financial professionals.
-                                </p>
-                                <a class="normal-link" href="https://www.cfainstitute.org/en/" target="_blank">www.cfainsitute.org<img src="/assets/svg/logos/link.svg" alt="link symbol"></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="container">
-                <div class="flex-title">
-                    <h4>Job Positions</h4>
-                    <span class="title-1">Plan</span>
-                </div>
-
-                <div class="column-list">
-                    <div class="column-box">
-                        <ul>
-                            <li>
-                                <span class="gray-1">Entry-level</span>
-                                <span class="white-2">Accountant</span>
-                                <p>
-                                    Starting my career as an entry-level accountant, I am eager to develop a solid foundation 
-                                    in financial management, accounting principles, and compliance.
-                                </p>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="column-box">
-                        <ul>
-                            <li>
-                                <span class="gray-1">Mid-level</span>
-                                <span class="white-2">Bank Associate</span>
-                                <p>
-                                    Driven to excel as a Bank Associate, leveraging my Bachelor's degree 
-                                    in Finance to assist clients with financial services, manage transactions, 
-                                    and contribute to the bank's growth through exceptional customer service 
-                                    and financial expertise
-                                </p>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="column-box">
-                        <ul>
-                            <li>
-                                <span class="gray-1">Higher Position</span>
-                                <span class="white-2">Investment Banker</span>
-                                <p>
-                                    Building on my advanced studies in finance, my ultimate ambition is to become an Investment Banker. 
-                                    I aspire to lead high-stakes financial transactions, including mergers and acquisitions, capital raising, 
-                                    and strategic advisory services.
-                                </p>
-                            </li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
