--- a/views/pages/de.ejs
+++ b/views/pages/de.ejs
@@ -53,9 +53,7 @@
                     </h3>
                     <h5>Zahlen und Wirtschaftsbereiche sind meine Leidenschaft</h5>
                     <p>
-                        Aufstrebender Finanz- und Buchhaltungsprofi, der einen Online-Bachelor- und 
-                        Master-Abschluss anstrebt, mit Schwerpunkt auf Finanzmärkten und aktienbezogenen 
-                        Sektoren. Kompetent in Datenanalyse, Finanzmanagement und Buchhaltungssoftware, 
+                        Kompetent in Datenanalyse, Finanzmanagement und Buchhaltungssoftware, 
                         mit einer Leidenschaft dafür, Zahlen zu nutzen, um das Unternehmenswachstum 
                         voranzutreiben. Fließend in fünf Sprachen, mit großartigen Problemlösungs- und 
                         Organisationsfähigkeiten.
