--- a/views/pages/en.ejs
+++ b/views/pages/en.ejs
@@ -52,9 +52,7 @@
                     </h3>
                     <h5>Numbers and economic fields are something I am passionate about</h5>
                     <p>
-                        Aspiring finance and accounting professional pursuing online 
-                        bachelor's and master's degrees, with a focus on financial markets 
-                        and stock-related sectors. Proficient in data analysis, financial management, 
+                        Proficient in data analysis, financial management, 
                         and accounting software, with a passion for leveraging numbers to drive 
                         business growth. Fluent in five languages, with great problem-solving and organizational skills.
                     </p>
